AC_INIT(LUTHER)

AC_CONFIG_HEADER(Emulator/config.h)

LUTHERHOME="`pwd`"

AC_SUBST(LUTHERHOME)

AC_PROG_CC
AC_PROG_CPP

AC_AIX

AC_PROG_LEX
AC_PROG_YACC
AC_PROG_RANLIB

AC_YYTEXT_POINTER

AC_HEADER_STDC

AC_CHECK_HEADERS(unistd.h)
AC_CHECK_HEADERS(stdlib.h)
AC_CHECK_HEADERS(string.h)

AC_TYPE_SIZE_T

AC_CHECK_SIZEOF(double)
AC_CHECK_SIZEOF(unsigned long int)

AC_FUNC_MMAP
AC_FUNC_ALLOCA

AC_HAVE_LIBRARY(m)
AC_HAVE_LIBRARY(socket)

AC_CHECK_FUNCS(cbrt)
AC_CHECK_FUNCS(random)
AC_CHECK_FUNCS(stat)
AC_CHECK_FUNCS(getcwd)
AC_CHECK_FUNCS(sigvec)
AC_CHECK_FUNCS(shmget)
AC_CHECK_FUNCS(times)
AC_CHECK_FUNCS(getrusage)

AC_TRY_RUN([#include "config.c"], AC_DEFINE(HAVE_MALLOC_BASE_H))
	
AC_CHECK_PROG(LUTHER_M4, m4, m4, echo no m4)
AC_CHECK_PROG(LUTHER_MAKE, make, make, echo no make)
AC_CHECK_PROG(LUTHER_TAGS, etags, etags, ctags)
AC_CHECK_PROG(LUTHER_ARCH, arch, `arch`, unknown)

AC_PATH_PROG(XTERMPATH, xterm, echo no xterm)

AC_OUTPUT(lut Makefile Library/Makefile Emulator/Makefile)


/bin/rm -f config.cache
